@@ -3,3 +3,4 @@ DIST font-arial-iso-8859-1.tar.bz2 234242 SHA256 9730f481764f367c9089d0166fb6ccf
 DIST font-arial-iso-8859-2.tar.bz2 222208 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer2-2.0_p20120828.tar.xz 1731288 SHA256 d2ef6482b18232472188652f1ecae2604ec09460d135557a14fa6f7092454b14 SHA512 0239644d9eb1effd342034824efac2c62e36750fdda2b7af4e30cfc3ac09bfe11fce8966275b72fc2f53635fc3dc285c0278e0e1eb2f95947e9e8a53cf619f00 WHIRLPOOL 8d3f533b34cf621399a66e4e1f2c94f99886520bdf04f6bfd52823b3dff3e7075412362dd19bfd02634178c202d16199cd297747c523359a1d0c5c4ccd349c15
 DIST mplayer2-2.0_p20121128.tar.xz 1932656 SHA256 17ec9fadb59c74dc4852df2d1c49d3d551a4d5b38eb50fc6c7c24b0e24d0df57 SHA512 8a7cedbdbfccc8f4777de8de3f1a6388495157b596bbf88982382278d073b7fcf80c8f27319e222d89323162f3522ac90e3a150f2922350b6138ca0a4ba7bfc8 WHIRLPOOL 238bab7b78f0852d283d57b048bcb737aec9ad215d5e3e4cee244ee2bfea5315c8b93925306ea8a7c62c02fe10689e9d6a5fe1d4f52e3e4f518e59f120a0ea83
+DIST mplayer2-2.0_p20130126.tar.xz 1914780 SHA256 ed68090e1ed2698132065ab4567e2920a6fb9f2f0868efc172f612d6848919f5 SHA512 b54780a0a45619ababf874fe40797a6c73c4adea26469178bbd5bf3396cd1977631622a8e150c02b650cf4a415d1e5d80943fda1e50935d921328022187b65dc WHIRLPOOL b1876eece2223d1b1281aeb1043c1f436c518363a2e720a2eb6be92853cac3ed0dce16b3c4300acffe4746925831ccfddcc24553d5fdcac4cce385701d5625bf
